# pasteuriser-ai-assistant

./: CMakeLists.txt  PAIA.cpp  PAIA.h  README.md  Scaler.cpp  Scaler.h  data_form.cpp  data_form.h  data_reform.cpp  data_reform.h  math_for_network.cpp  math_for_network.h  network.cpp  network.h
Common/: DataFormats.h  DataReader.h  DataReformer.cpp  DataReformer.h  WARNING.cpp
CppForecasting/data_changer/: data_changer.cpp  data_changer.h
CppForecasting/data_form/: data_form.cpp  data_form.h
DataManipulator/: DataManipulator.h  MainOCDFMenu.cpp  MainOCDFMenu.h  MainTDFMenu.cpp  MainTDFMenu.h  TDFCreator.cpp
ForecasterTS/: CMakeLists.txt  CMakePresets.json
ForecasterTS/src/: ForecasterTS.cpp  ForecasterTS.h
LSTM models/: TestModel.lstm  readme.md
PyVisualisation/: TDF_Visual.py
Python_version/autoencoder/doc/: readme.md
Python_version/forecasting/doc/: readme.md
Python_version/forecasting/src/: forecasting.py
Python_version/processing/doc/: readme.md
Python_version/simulation/doc/: readme.md
Python_version/simulation/src/: main.py
Python_version/visualisation/doc/: readme.md
autoencoder/src/: autoencoder.keras
data/: README.MD
docs/manual/: DataManipulator.tex  General.tex  PAIA.tex  Theory.tex  diplom.code-workspace  preamble.tex
parsing/doc/: readme.md
visualisation/doc/: readme.md
visualisation/src/: approximation.py  visualisation.py
work/data_visualization/doc/: readme.md
work/data_visualization/src/: main.py  visualisation.py
